responsive css - spacing fixes

--- a/style.css
+++ b/style.css
@@ -133,11 +133,21 @@ a:hover {
 /* Mobile  */
 
 @media (max-width: 435px) {
+div.body-content {
+    display: flex;
+    justify-content: start;
+    margin-top: 5rem;
+}
+
     div.body-content h2 {
         font-size: 2.3rem;
     }
 
     div.body-content h4 {
         font-size: 1rem;
+    }
+
+    div.body-content a {
+        color: white;
     }
 }
